[package]
name = "document-diff-report"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
description = "文書の新旧2版を段落単位で比較し、横並びHTMLレポートを生成するCLIツール"

[dependencies]
anyhow = "1.0"
clap = { version = "4.6", features = ["derive"] }
pdfium-render = { version = "0.9", default-features = false, features = ["pdfium_latest", "thread_safe"] }
similar = "3.1"
zip = { version = "6.0", default-features = false, features = ["deflate"] }
quick-xml = "0.41"
calamine = "0.36"
csv = "1.4"
encoding_rs = "0.8"

[profile.release]
lto = false
